test/src/e2e_vm_tests/test_programs/should_fail/nested_impure/src/main.sw
contract;

fn main() {
    foo();
}

fn foo() {
    bar();
    baz();
}

// Although annotated, with no args is pure.
#[storage()]
fn bar() {
    let z = baz();
}

// Explicitly impure.
#[storage(read)]
fn baz() -> u64 {
  5
}
